UI/css/main.css
*{
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.container {
    display: grid;
    height: 100vh;
    width: 100vw;
    grid-template-rows: 20% 80%;
}

.header {
    justify-content: center;
    align-items: center;
    height: 100px;
    display: grid;
    background: #3700B3;
    grid-auto-flow: column;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    grid-gap: 5px;
    color: white;
   
}

p {
    color: rgb(24, 23, 26);

} 

.btn {
    /* to give the curved edge for the btn */
font-family: Arial;
color: #070000;
font-size: 18px;
padding: 4px;
margin: 5px;
height: auto;
text-decoration: none;
}
#title {
    color: ghostwhite;
    height: 40px;
    font-style: bold;
    font-size: 24px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    margin-left:20px; 
   }
   #img{
       max-width: 40px;

   }

.search {
    display: grid;
    grid-template-columns: 40% 10%;
    justify-content: center;
    align-content: center;
    margin-left: 1px;
}
#search {
    border-radius: 7px;
    width: 230px;
    height: 30px;
}

#search_button {
    width: 88px;
    height: 30px;
}
/* Fixes submit button height problem in Firefox */
.btn::-moz-focus-inner {
    border: 0;
}
.login {
  color: white;
  background: none;
}

#home {
    text-decoration: none;
    color: rgb(244, 250, 248);
    padding-right: 10px;
    font-size: 18px;
}

.sidebar-1 {
    grid-row-gap: 20px;
    grid-area: sidebar-1;
    grid-template-rows: 1fr 3fr;
    display: grid;
    padding: 10px;
   
}

.main {
    display: grid;
    margin: 20px;
    /* margin-top: 60px; */
    grid-template-columns: 200px 5fr 2fr;
    grid-template-areas: 
    "sidebar-1  content sidebar-2";
    grid-gap: 10px;
    grid-auto-rows: span 1 / -1;
    border-left-color: 1px solid grey; 

}

.fieldset{
    border-radius: 10px;
    border: none;
    /* border-left: 1px solid #666666; */
    grid-row-end: -1;
}

.ask{
    background: #3700B3;
    color: white;
    font-weight: 900;
    font-stretch: condensed;
    height: auto;
    font-size: 20px;

}

.sidebar-2 {
    border-top-style: inset;
    border-style: 1px dashed;
    background-color: rgb(236, 225, 225);
    grid-area: sidebar-2;
    grid-template-rows: 1fr 1fr 1fr 1fr;
    justify-content: center;
    margin-top: 10px;
    padding-bottom: 300px;
    
}
.content {
    display: grid;
    grid-area: content;
    padding:20px;
    border: 1px hidden darkolivegreen;

}
.form {
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-gap: 5px;
    font-size: 20px;
    margin-left: 10px;

}
label {
    margin-top: 20px; 
} 
li {
    margin: 40px;
    list-style-type: square;
}

.ask-ques {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-gap: 10px;

}

#ques-body {
    width: 80%;
    height: 100%;
    margin: 20px;

}
#ques-title {
   width: 80%;
   margin: 10px; 
}

.ques-btn {
    width: 70px;
    margin: 80px;
    height: 50px; 
 }

 #join {
     width: fit-content;
     font-size: 18px;
 }

 #login {
     color: darkblue;
     padding: 10px;
     margin-right: 5px;
 }

